Fixed themes hidding main user interface when executed via command-line
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@929 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -176,6 +176,7 @@ ndo
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
+
 X.XX - YYYY
 - Expanded Options window to fit all missing INI directives.
 - Added optional toolbar with menu icons (trlkly).
@@ -189,6 +190,7 @@ X.XX - YYYY
 - Added TARGA (TGA ICB, VDA, and VST) toolchain, and TGA detection by contents.
 - Added YUV, YCBCRA, YCBCR, X, UYVY, SUN, SGI, RFG, RGB, RGBA, PTIF, PCL, PCLS, MTV, MVG, MSL, MPR, MPC, MONO, J2C, J2K, INLINE, GRAY, FPX, FAX, EPDF, DPX, DDS, CMYK, CMYKA, CIN, BPG, ART to the ImageMagick toolchain.
 - Reenabled Embarcadero's Luna, Metropolis and Windows 10 themes removed in FileOptimizer 9.10, because they work fine again with Windows 10 Anniversary and later.
+- Fixed themes hidding main user interface when executed via command-line.
 - Made INI processing safer.
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window.
