--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -194,7 +194,7 @@ X.XX - YYYY
 - When multiple instances are allowed, FO will not warn anymore about Optimization still running, nor kill plugin processes.
 - Made INI processing safer.
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
-- Fixed version display in About window.
+- Fixed version display in About window, and show internal compiler version.
 - Tweaked the Information window.
 - Minor usability improvements.
 - Enabled ImageMagick for JPEG processing when lossy is permitted.
