--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,7 @@
+- Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
+
+- Remove PCXLite because it is not needed with ImageMagick.
+
 - Would it be possible for you to add a command line flag to hide the window and just return a 0 or 1 whether the provided file(s) have completed the operations? (Devedse)
 
 - Would it be possible to also skip the warning message that shows if there are multiple instances of the product running? (What I would like to do is run a few instances of the program in parallel from another tool I'm working on without having to manually click those message boxes away.) (Devedse)
@@ -138,6 +142,7 @@ ndo
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (da09899) - https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 3.2.4 - http://ffmpeg.zeranoe.com/builds/
+- FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
 - Gifsicle 1.89 - http://www.lcdf.org/gifsicle/
@@ -197,6 +202,8 @@ X.XX - YYYY
 - Fixed version display in About window, and show internal compiler version.
 - Tweaked the Information window.
 - Minor usability improvements.
+- Added FLAC codec to the FLAC toolchain to recompress them (AlexNG).
+- Only use flacout in FileOptimizer compression levels 9, because it is slow (AlexNG).
 - Enabled ImageMagick for JPEG processing when lossy is permitted.
 - Updated PCXLite 1.1 x86 and x64 Visual C++ 2017 custom builds.
 - Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
