--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -23,21 +23,11 @@ Devedse
 
 - Add different shutdownwhen done modes: Hibernate, Sleep, Reboot, or Sign Out (TPS).
 
-- Add a GUI toolbar instead of menu (TPS).
-
-- Add GIF GUI Settings (RejZor).
-
 - Add a Pause/Resume option (Pritt).
 
 - Allow start optimizing while files are being added in background (Pritt).
 
 - Do not touch files if gains are less than X% (Michael Goeller).
-
-- Skipped items
-
-- Faster and slightly larger 32 bit version thanks to be migrated to CLang backend (64 bit already was).
-
-- Add include mask, similar to exclude mask, to limit processing to particular file extensions (Tomasz W.).
 
 - Add Huffmix PNG compression (Stephan Busch).
 
@@ -57,8 +47,6 @@ Devedse
 
 - Truncate filenames in cell draw.
 
-- Add Information option on context menu.
-
 - Optimize GetExtensionByContent to use regular comparisons instead of memcmp for short comparisons.
 
 - Make quick access customized buttons permanent in ribbon, as well as its visibility and size (Newatomic).
@@ -77,21 +65,15 @@ Devedse
 
 - Remove obsolete plugins with Leanify; ADV*, mozjpegtran, zRecompress, ...
 
-- Add GUI options for bBMPCopyMetadata, bGIFCopyMetadata, bMiscCopyMetadata, bPCXCopyMetadata, bTIFFCopyMetadata
-
 - Icono para el menú contextual de Help es diferente al de Help.
 
 - Crash when changing ribbon style http://www.techques.com/question/1-1511092/Access-violation-if-i-try-to-change-the-ribbon-style-using-a-TRibbonCombobox
 
 - Comprimir ZIP distribución con Zopfli
 
-- Cambiar MenuClick por act.
-
 - PNG transparency: http://encode.ru/threads/1260-CryoPNG-short-introduction
 
 - OptiPNG-ZopFli https://github.com/sayurin/optipng-zopfli (Jose)
-
-- Preferencias pestaña others con metadata.
 
 - Lanzar plugins com childs para que mueran automaticamente al cerrar?
 
@@ -198,6 +180,7 @@ X.XX - YYYY
 - Fixed themes hidding main user interface when executed via command-line.
 - When multiple instances are allowed, FO will not warn anymore about Optimization still running, nor kill plugin processes.
 - Made INI processing safer.
+- Expanded contextual menu with more new commands.
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window, and show internal compiler version.
 - Tweaked the Information window.
