Added Aero's glass frame to all windows
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@940 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -184,6 +184,7 @@ X.XX - YYYY
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window, and show internal compiler version.
 - Tweaked the Information window.
+- Added Aero's glass frame to all windows.
 - Minor usability improvements.
 - Added FLAC codec to the FLAC toolchain to recompress them (AlexNG).
 - Only use flacout in FileOptimizer compression levels 9, because it is slow (AlexNG).
