Speededup adding files to grid which is now several times faster
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@949 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Reworked About window to be more colorful.
 - Added donator information displayed in Information box. You can enter your donator email in Options->Appearance->Donator.
 - Improved a lot grid performance.
+- Speededup adding files to grid which is now several times faster.
 - Added ImageMagick to the GIF toolchain.
 - Added ClearWhenComplete=false INI setting to autoclear file list when optimization completes (Lanette Fidrych).
 - Added TARGA (TGA ICB, VDA, and VST) toolchain, and TGA detection by contents.
