- Accurated file listings. Only supported files will be added to the grid. - Fixed graphic artifacts when sorting.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@954 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Added optional toolbar with menu icons (trlkly).
 - Added Add folder option (bl3uge).
 - Added detected filetype under extension column in file list, when its extension is not know.
+- Accurated file listings. Only supported files will be added to the grid.
 - Reworked About window to be more colorful.
 - Added donator information displayed in Information box. You can enter your donator email in Options->Appearance->Donator.
 - Improved a lot grid performance (listing, sorting, removing, clearing, ...).
