Fixed MPEG recompression when more than one audio stream existed (AlexNG)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@958 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -185,6 +185,7 @@ X.XX - YYYY
 - Expanded contextual menu with more new commands.
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window, and show internal compiler version.
+- Fixed MPEG recompression when more than one audio stream existed (AlexNG).
 - Tweaked the Information window.
 - Added Aero's glass frame to all windows.
 - Minor usability improvements.
