Rewritten update check to use POST
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@964 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -177,6 +177,7 @@ X.XX - YYYY
 - Fixed themes hidding main user interface when executed via command-line.
 - Fixed that double-clicking on fixed columns could open selected file.
 - When multiple instances are allowed, FO will not warn anymore about Optimization still running, nor kill plugin processes.
+- Rewritten update check to use POST.
 - Better 7z SFX detection.
 - Made INI processing safer.
 - Expanded contextual menu with more new commands.
