Prevent spaces sending .ini
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@968 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,4 +1,4 @@
-- INI contents are sent with spaces.
+- Add donator reminde with number of files optimized.
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
