--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -121,7 +121,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (da09899) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 3.2.4 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 3.3.3 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -130,7 +130,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.6.5 - http://www.imagemagick.org
+- ImageMagick 7.0.6.6 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -195,9 +195,10 @@ X.XX - YYYY
 - Removed PDXLite because it contains bugs, and is not needed with ImageMagick.
 - Reduced 7z EXE SFX in the portable distribution in 105 KB., becasuse extractor is now UPX'ed.
 - Enabled ImageMagick for JPEG processing when lossy is permitted.
+- Updated ffmpeg to 3.3.3.
 - Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pngquant to 2.10.1.
-- Updated ImageMagick to 7.0.6.5 with HDRI support.
+- Updated ImageMagick to 7.0.6.6 with HDRI support.
 - Updated to NSIS 3.02.1.
 - Updated to cppcheck 1.80.
 - Some minor optimizations and code cleanup.
