Made MessageBoxes autoclose after 30 seconds (Devedse)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@985 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -180,6 +180,7 @@ X.XX - YYYY
 - Formatted numbers, sizes and times according to locale settings.
 - Fixed that double-clicking on fixed columns could open selected file.
 - When multiple instances are allowed, FO will not warn anymore about Optimization still running, nor kill plugin processes.
+- Made MessageBoxes autoclose after 30 seconds (Devedse).
 - Rewritten update check to use POST.
 - Better 7z SFX detection.
 - Made INI processing safer.
