--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -125,7 +125,7 @@ ndo
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
-- Gifsicle 1.89 - http://www.lcdf.org/gifsicle/
+- Gifsicle 1.90 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
@@ -196,6 +196,7 @@ X.XX - YYYY
 - Removed PDXLite because it contains bugs, and is not needed with ImageMagick.
 - Reduced 7z EXE SFX in the portable distribution in 105 KB., becasuse extractor is now UPX'ed.
 - Enabled ImageMagick for JPEG processing when lossy is permitted.
+- Updated gifsicle to 1.90 (custom build).
 - Updated ffmpeg to 3.3.3.
 - Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pngquant to 2.10.1.
