--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -185,6 +185,7 @@ X.XX - YYYY
 - Better 7z SFX detection.
 - Made INI processing safer.
 - Expanded contextual menu with more new commands.
+- Reenabled ECT on APNG files (fhanau).
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window, and show internal compiler version.
 - Fixed MPEG recompression when more than one audio stream existed (AlexNG).
