--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -120,7 +120,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-- ECT 0.8.2 (da09899) - https://github.com/fhanau/Efficient-Compression-Tool
+- ECT 0.8.2 (a9cb2da) - https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 3.3.3 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
@@ -198,6 +198,7 @@ X.XX - YYYY
 - Reduced 7z EXE SFX in the portable distribution in 105 KB., becasuse extractor is now UPX'ed.
 - Enabled ImageMagick for JPEG processing when lossy is permitted.
 - Updated gifsicle to 1.90 (custom build).
+- Updated to ECT 0.8.2 (a9cb2da) x86 and x64 daily optimized builds (thanks Malloc Voidstar).
 - Updated ffmpeg to 3.3.3.
 - Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pngquant to 2.10.1.
