Disabled ECT in MP3 toolchain, because it is not compiled with that module (fhanau)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@993 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -187,6 +187,7 @@ X.XX - YYYY
 - Expanded contextual menu with more new commands.
 - Reenabled ECT on APNG files (fhanau).
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
+- Disabled ECT in MP3 toolchain, because it is not compiled with that module (fhanau).
 - Fixed version display in About window, and show internal compiler version.
 - Fixed MPEG recompression when more than one audio stream existed (AlexNG).
 - Tweaked the Information window.
