--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -130,7 +130,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.0 - http://www.imagemagick.org
+- ImageMagick 7.0.7.1 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -163,6 +163,7 @@ ndo
 
 X.XX - YYYY
 - Fixed update checker when donor.
+- Updated ImageMagick to 7.0.7.1 with HDRI support.
 
 
 11.00 - 2017/09/05
