Made restore default settings smoother
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1022 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,6 +163,7 @@ ndo
 
 X.XX - YYYY
 - Improved donator information (Peni).
+- Made restore default settings smoother.
 - Updated ImageMagick to 7.0.7.4 with HDRI support.
 
 
