--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -165,6 +165,7 @@ X.XX - YYYY
 - Improved donator information (Peni).
 - Improved APNG compression adding ECT and pingo.
 - Improved PNG 9-patch compression adding pingo.
+- Added more supported extensions (.mzz, .rll).
 - Made restore default settings smoother.
 - Updated pingo to 0.91n x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.5 with HDRI support.
