--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -127,10 +127,10 @@ ndo
 - Flasm 1.62 - http://flasm.sourceforge.net
 - Gifsicle 1.90 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
-- Ghostscript 9.21 - http://www.ghostscript.com
+- Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.5 - http://www.imagemagick.org
+- ImageMagick 7.0.7.6 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -167,8 +167,9 @@ X.XX - YYYY
 - Improved PNG 9-patch compression adding pingo.
 - Added more supported extensions (.mzz, .rll).
 - Made restore default settings smoother.
+- Updated Ghostscript to 9.22.
 - Updated pingo to 0.91n x86 and x64 versions.
-- Updated ImageMagick to 7.0.7.5 with HDRI support.
+- Updated ImageMagick to 7.0.7.6 with HDRI support.
 
 
 11.10 - 2017/09/24
