--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -146,7 +146,7 @@ ndo
 - mutool 1.11 - http://mupdf.com/downloads/
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.91n - http://css-ig.net/pingo
+- pingo 0.92 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.10.1 - http://www.pngquant.org
@@ -168,8 +168,9 @@ X.XX - YYYY
 - Added more supported extensions (.mzz, .rll).
 - Made restore default settings smoother.
 - Updated Ghostscript to 9.22.
-- Updated pingo to 0.91n x86 and x64 versions.
+- Updated pingo to 0.92 x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.6 with HDRI support.
+- Updated to cppcheck 1.81.
 
 
 11.10 - 2017/09/24
