--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -120,7 +120,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-- ECT 0.8.2 (a9cb2da) - https://github.com/fhanau/Efficient-Compression-Tool
+- ECT 0.8.2 (9290a5cf7ea0) - https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 3.3.3 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Improved PNG 9-patch compression adding pingo.
 - Added more supported extensions (.mzz, .rll).
 - Made restore default settings smoother.
+- Updated to ECT 0.8.2 (9290a5cf7ea0) x86 and x64 daily optimized builds (thanks przemoc).
 - Updated Ghostscript to 9.22.
 - Updated pingo to 0.92 x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.6 with HDRI support.
