--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -137,7 +137,7 @@ ndo
 - jpegoptim 1.4.4 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
-- Leanify 0.4.3.192 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
+- Leanify 0.4.3.195 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libwebp 0.6.0 - http://www.webmproject.org
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Added more supported extensions (.mzz, .rll).
 - Made restore default settings smoother.
 - Updated to ECT 0.8.2 (9290a5cf7ea0) x86 and x64 daily optimized builds (thanks przemoc).
+- Updated Leanify to 0.4.3.195 daily binaries.
 - Updated Ghostscript to 9.22.
 - Updated pingo to 0.92 x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.6 with HDRI support.
