- Workarrounded ImageMagick GIF processing flags (Devedse). - Updated ImageMagick flags (Devedse).
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1035 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,7 +163,8 @@ ndo
 
 
 X.XX - YYYY
-
+- Workarrounded ImageMagick GIF processing flags (Devedse).
+- Updated ImageMagick flags (Devedse).
 
 
 11.20 - 2017/10/12
