--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -165,6 +165,7 @@ ndo
 X.XX - YYYY
 - Workarrounded ImageMagick GIF processing flags (Devedse).
 - Updated ImageMagick flags (Devedse).
+- Tested with Windows 10 Fall Creators Update.
 
 
 11.20 - 2017/10/12
