Tested with wine 2 under GalliumOS 2.1 / lubuntu 16.10
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1039 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -168,6 +168,7 @@ X.XX - YYYY
 - Updated ImageMagick to 7.0.7.8 with HDRI support.
 - Updated pingo to 0.92c x86 and x64 versions.
 - Tested with Windows 10 Fall Creators Update.
+- Tested with wine 2 under GalliumOS 2.1 / lubuntu 16.10.
 
 
 11.20 - 2017/10/12
