- Added integrated ads display, since some users wanted to support FileOptimizer and do not have Paypal. You can remove if you want. - Added HideAds=false INI setting to remove ads. - Reduced reminder frequency.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1052 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,32 @@
+- Al ocultarlo no se sube todo.
+if(WebBrowser <> NIL) then
+    begin
+       WebBrowser.Stop;
+       WebBrowser.Destroy;
+    end;
+
+    WebBrowser        := TWebBrowser.Create(Form1);
+    TWinControl(WebBrowser).Name   := 'WebBrowser';
+    TWinControl(WebBrowser).Parent := Form1; //set parent...can be panel, tabs etc
+    WebBrowser.Silent := true;  //don't show JS errors
+    WebBrowser.Visible:= true;  //visible...by default true
+
+    //don't set width/heigh/top/left before TWinControl(WebBrowser).Parent := Form1;
+    WebBrowser.Top    := 10;
+    WebBrowser.Left   := 10;
+    WebBrowser.Height := 600;
+    WebBrowser.Width  := 800;
+    WebBrowser.OnDocumentComplete  := WebBrowserDocumentComplete;
+  //WebBrowser.OnNavigateComplete2 := WebBrowserNavigateComplete2;
+end;
+
+
+
+- Eliminar botón derecho.
+
+
+
+
 - Add donator reminde with number of files optimized.
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
@@ -163,6 +192,9 @@ ndo
 
 
 X.XX - YYYY
+- Added integrated ads display, since some users wanted to support FileOptimizer and do not have Paypal. You can remove if you want.
+- Added HideAds=false INI setting to remove ads.
+- Reduced reminder frequency.
 - Workarrounded ImageMagick GIF processing flags (Devedse).
 - Fixed default process priority set to idle, even if it should be normal (RejZoR).
 - Avoided m7zRepacker treating .exe files.
