--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -122,7 +122,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (9290a5cf7ea0) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 3.3.3 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 3.3.4 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -175,6 +175,7 @@ X.XX - YYYY
 - Fixed default process priority set to idle, even if it should be normal (RejZoR).
 - Avoided m7zRepacker treating .exe files.
 - Updated Leanify to 0.4.3.208 daily binaries.
+- Updated ffmpeg to 3.3.4 (TPS).
 - Updated ImageMagick flags (Devedse).
 - Updated ImageMagick to 7.0.7.9 with HDRI support.
 - Updated SQLite to 3.21.0 x86 and x64 Visual C++ 2017 custom builds.
