--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -128,7 +128,7 @@ ndo
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.9 - http://www.imagemagick.org
+- ImageMagick 7.0.7.11 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -165,6 +165,7 @@ X.XX - YYYY
 - Reduced ads number because now they are 728x90.
 - Improved window restore on next launch when maximized.
 - Improved ads viewer.
+- Updated ImageMagick to 7.0.7.11 with HDRI support.
 - Some minor optimizations and code cleanup.
 
 
