--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -126,7 +126,7 @@ ndo
 - Gifsicle 1.90 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.88 - https://kornel.ski/lossygif
 - Ghostscript 9.22 - http://www.ghostscript.com
-- GNU Strip 2.27 - http://www.gnu.org/software/binutils/
+- GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
 - ImageMagick 7.0.7.11 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
@@ -136,7 +136,7 @@ ndo
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.208 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
-- libwebp 0.6.0 - http://www.webmproject.org
+- libwebp 0.6.0 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.2 - https://github.com/mozilla/mozjpeg
@@ -148,7 +148,7 @@ ndo
 - pingo 0.92e - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
-- pngquant 2.10.1 - http://www.pngquant.org
+- pngquant 2.11.2 - http://www.pngquant.org
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
@@ -166,6 +166,8 @@ X.XX - YYYY
 - Improved window restore on next launch when maximized.
 - Improved ads viewer.
 - Updated ImageMagick to 7.0.7.11 with HDRI support.
+- Updated pngquant to 2.11.2.
+- Updated strip to 2.29.1.
 - Some minor optimizations and code cleanup.
 
 
