--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -162,6 +162,8 @@ ndo
 
 X.XX - YYYY
 - Permantenly removed theme logic as adviced in 11.30.
+- Delayed load of ads to increase startup speed.
+
 
 11.31 - 2017/11/17
 - Reduced donator reminder frequency.
