Fixed execution of gifsicle and gifsicle-lossy due to wrong parameters (dado23)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1084 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,6 +163,7 @@ ndo
 X.XX - YYYY
 - Permantenly removed theme logic as adviced in 11.30.
 - Delayed load of ads to increase startup speed.
+- Fixed execution of gifsicle and gifsicle-lossy due to wrong parameters (dado23).
 
 
 11.31 - 2017/11/17
