Write a good english
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1088 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,7 +163,7 @@ ndo
 X.XX - YYYY
 - Permantenly removed theme logic as adviced in 11.30.
 - Delayed load of ads to increase startup speed.
-- Fixed disables Windows error handling requiring Vistar or later due to calling GetErrorMode (bianamaran).
+- Fixed disabled Windows error handling in 11.30 requiring Vista or later due to calling GetErrorMode. Now we are XP compatible again (bianamaran).
 - Fixed execution of gifsicle and gifsicle-lossy due to wrong parameters (dado23).
 - Faster gifsicle-lossy execution because -j (multithreaded jobs) even if undocumented, is also supported.
 - Some minor optimizations and code cleanup.
