--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -132,7 +132,7 @@ ndo
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
-- jpegoptim 1.4.4 - http://www.kokkonen.net/tjko/projects.html
+- jpegoptim 1.4.4 git-9578d79 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.208 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Fixed disabled Windows error handling in 11.30 requiring Vista or later due to calling GetErrorMode. Now we are XP compatible again (bianamaran).
 - Fixed execution of gifsicle and gifsicle-lossy due to wrong parameters (dado23).
 - Faster gifsicle-lossy execution because -j (multithreaded jobs) even if undocumented, is also supported.
+- Updated jpegoptim to 1.4.4-git-9578d79 (custom built).
 - Some minor optimizations and code cleanup.
 
 
