--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -159,6 +159,7 @@ ndo
 
 
 X.XX - YYYY
+- Implemented reading options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
 
 
 11.40 - 2017/11/21
