--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -152,14 +152,16 @@ ndo
 - rehuff - http://wiki.xiph.org/Rehuff
 - SQLite 3.21.0 - http://www.sqlite.org
 - Tidy 5.4.0 - http://www.html-tidy.org
-- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
+- TruePNG 0.6.2.4 - http://x128.ho.ua/pngutils.html
 - UPX 3.94 - https://upx.github.io
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 
 X.XX - YYYY
-- Implemented reading options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
+- Implemented ability to read options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
+- Updated TruePNG to 0.6.2.4 (Mike).
+
 
 
 11.40 - 2017/11/21
