--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -2,8 +2,7 @@ Reusar código ini. Ini global
 Ver archivos po
 Escapar y de escapar ini
 Reemplazar sourceforge. También en proyecto
-Ordenadr PCH
-Revisar buffer updates
+Desinstalador eliminar registro e inis
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
@@ -168,6 +167,7 @@ ndo
 X.XX - YYYY
 - Hardened buffers in update checker (Tom B, Abdulaziz Alnasi).
 - Implemented ability to read options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
+- Optimized precompiled headers.
 - Updated TruePNG to 0.6.2.4 (Mike).
 
 
